# spearmint

./: .gitignore  LICENSE  README.md
assets/: README.md
configs/: s1_binding_args.json  s2_stability_args.json  s3_calibration_v2_args.json  s3_film_v2_args.json
data/binding_stability/: test.csv  val.csv
data/stage3_assay_conditioning/: test.csv  train.csv  val.csv
results/: s3_predictions.csv
results/downstream/IMM/: immunogenicity_ba_stability_preds.csv  immunogenicity_netmhcpan_affinity_preds.csv  immunogenicity_netmhcstabpan_preds.csv  immunogenicity_tlstab_preds.csv
results/downstream/NEOAG/: borgers_harmonized_preds.csv  braun_harmonized_preds.csv  hu_harmonized_preds.csv  rojas_harmonized_preds.csv
src/: README.md  pyproject.toml
src/mint_stability/: __init__.py  _compat.py  backbone.py  build_hf.py  configuration_mint.py  configuration_spearmint.py  convert_checkpoint.py  esm2_config.json  modeling_base.py  modeling_mint.py  modeling_spearmint.py  tokenizer.py  train_binding.py  train_stability.py  train_stage3.py
tests/: test_backbone.py  test_build_hf.py  test_guards.py  test_models.py  test_tokenizer.py  test_training.py
